--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Ratnakar Giri</h1>
     <p>Software Developer, Educator at Geekster</p>
     <a href="https://www.linkedin.com/in/ratnakargiri/">Linkedin</a>
-    <a href="https://github.com/ratnakargiri973">Github</a>
+    <a href="https://github.com/ratnakargiri973/">Github</a>
     <hr>
     <h2>Experience</h2>
     <h3> Software developer at Amazon</h3>
